1. code added to create, insert and read from database

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>This is POi</title>
+    <title>This is the POi</title>
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
 </head>
 <body>
-        <h2>Hello, this is POi</h2>
+        <h2></h2>
         <img class="displayed-centre" src="@routes.Assets.at("images/POi.png")">
         <br>
 
