Grouped based on the controller

--- a/app/views/LoginController/login.scala.html
+++ b/app/views/LoginController/login.scala.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>This is the POi</title>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")"></link>
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")"></link>
 </head>
 <body>
         <h2></h2>
