--- a/app/views/LoginController/login.scala.html
+++ b/app/views/LoginController/login.scala.html
@@ -1,30 +1,50 @@
+@(form: Form[(String,String)])
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>This is the POi</title>
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")"></link>
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")"></link>
+    <link rel="icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")"></link>
+
 </head>
 <body>
+    <div class="container">
         <h2></h2>
-        <img class="displayed-centre" src="@routes.Assets.at("images/POi.png")">
+        <img src="@routes.Assets.at("images/POi.png")">
         <br>
+        <h2></h2>
+        <!--<form action="/login" method="POST">-->
+        @helper.form(routes.LoginController.login) {
 
-        <form action="/login" method="POST">
+
             <div class="textBoxHolder">
                 <p>
-                    <input id="username" type="text" placeholder="Username" autofocus required>
+                    <input type="email" name="email" placeholder="Email" id="email" value="@form("email").value" autofocus required>
                 </p>
                 <p>
-                    <input id="password" type="password" placeholder="Password" required>
+                    <input type="password" name="password" id="password" placeholder="Password" required>
                 </p>
             </div>
+
+            @form.globalError.map { error =>
+
+                <div class="has-error">
+                    <p class="control-label">
+                        @error.message
+                    </p>
+                </div>
+            }
+
             <div class="buttonHolder">
                 <p>
                     <input type="submit" value="Log in" title="Search">
                 </p>
             </div>
-        </form>
 
+        }
+        <!--</form>-->
+    </div>
 </body>
 </html>
