--- a/app/views/PoiController/poiMap.scala.html
+++ b/app/views/PoiController/poiMap.scala.html
@@ -20,6 +20,8 @@
 
         .poi-detail-window ul {
             list-style: none;
+            margin: 0;
+            padding: 0;
         }
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.13&sensor=true&libraries=places&key=AIzaSyCxFCkUDgu8LbqCAg3I8_E5e7dAZFWltPg"></script>
@@ -43,6 +45,7 @@
             <ul id="types"></ul>
             <div id="votes"></div>
             <a class="btn btn-default" href="#" id="get-directions">Get Directions</a>
+            <div id="statistics"></div>
         </div>
     </div>
     <div id="map-canvas"></div>
